# immo-search

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  com.immo-search-weekly.plist  com.immo-search.plist  immo-search-context.md  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py  config.py  mailer.py  main.py  storage.py
app/sources/: __init__.py  altis.py  athena.py  avenir.py  base.py  biddit.py  capsud.py  century21.py  dewaele.py  engelvoelkers.py  era.py  erowz.py  homeavenue.py  immobw.py  immoneuf.py  immoscoop.py  immovillages.py  immovlan.py  immoweb.py  latouretpetit.py  lesviviers.py  logicimmo.py  notaris.py  ppr.py  promimo.py  realo.py  remax.py  sothebys.py  trevi.py  trovit.py  vlan.py  zimmo.py
tests/: test_config.py  test_email_live.py  test_mailer.py  test_sources.py  test_storage.py
