[project]
name = "immo-search"
version = "1.0.0"
description = "Personal Real Estate Hunter — Brabant Wallon, Belgium"
requires-python = ">=3.12"
authors = [
    { name = "Wallace Espindola", email = "wallace.espindola@gmail.com" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "brotli>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "black>=24.10.0",
    "mypy>=1.20.1",
    "types-requests>=2.32.0",
    "types-beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
